--- a/preferences/Resources/MediaControls.plist
+++ b/preferences/Resources/MediaControls.plist
@@ -33,6 +33,7 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsPrimaryLabel</string>
 				<key>label</key>                    <string>Title</string>
+				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -41,6 +42,7 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsSecondaryLabel</string>
 				<key>label</key>                    <string>Artist / Device</string>
+				<key>alpha</key>                    <true/>
 		</dict>
 
 		<dict>
@@ -54,6 +56,7 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsLeftButton</string>
 				<key>label</key>                    <string>Previous Track</string>
+				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -62,6 +65,7 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsMiddleButton</string>
 				<key>label</key>                    <string>Play / Pause</string>
+				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -70,6 +74,7 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsRightButton</string>
 				<key>label</key>                    <string>Next Track</string>
+				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -83,8 +88,22 @@
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>key</key>                      <string>prysmMediaControlsArtworkPreview</string>
-				<key>label</key>                    <string>Prysm Artwork Preview</string>
+				<key>key</key>                      <string>mediaControlsRoutingButton</string>
+				<key>label</key>                    <string>AirPlay</string>
+				<key>alpha</key>                    <true/>
+		</dict>
+
+		<dict>
+				<key>cell</key>                     <string>PSGroupCell</string>
+				<key>label</key>                    <string>Prysm Extras</string>
+				<key>feature</key>                  <string>prysm</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>prysmMediaControlsArtworkPreviewBackground</string>
+				<key>label</key>                    <string>Artwork Preview Background</string>
 				<key>feature</key>                  <string>prysm</string>
 				<key>alpha</key>                    <true/>
 		</dict>
@@ -92,8 +111,19 @@
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>key</key>                      <string>mediaControlsRoutingButton</string>
-				<key>label</key>                    <string>AirPlay</string>
+				<key>key</key>                      <string>prysmMediaControlsArtworkPreview</string>
+				<key>label</key>                    <string>Artwork Preview</string>
+				<key>feature</key>                  <string>prysm</string>
+				<key>alpha</key>                    <true/>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>key</key>                      <string>prysmMediaControlsAirplayBackground</string>
+				<key>label</key>                    <string>AirPlay Background</string>
+				<key>feature</key>                  <string>prysm</string>
+				<key>alpha</key>                    <true/>
 		</dict>
 	</array>
 	<key>title</key>                             <string>Media Controls</string>
