--- a/preferences/Resources/Sliders.plist
+++ b/preferences/Resources/Sliders.plist
@@ -33,6 +33,15 @@
 			<key>key</key>                      <string>slidersBrightnessBackground</string>
 			<key>label</key>                    <string>Background</string>
 		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSLinkCell</string>
+			<key>cellClass</key>                <string>MEVOColorPicker</string>
+			<key>alpha</key>                    <true/>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>slidersBrightnessLabel</string>
+			<key>label</key>                    <string>Percent Label</string>
+			<key>feature</key>                  <string>prysm</string>
+		</dict>
 
 		<dict>
 			<key>cell</key>                     <string>PSGroupCell</string>
@@ -62,11 +71,21 @@
 			<key>key</key>                      <string>slidersVolumeBackground</string>
 			<key>label</key>                    <string>Background</string>
 		</dict>
+		<dict>
+			<key>cell</key>                     <string>PSLinkCell</string>
+			<key>cellClass</key>                <string>MEVOColorPicker</string>
+			<key>alpha</key>                    <true/>
+			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                      <string>slidersVolumeLabel</string>
+			<key>label</key>                    <string>Percent Label</string>
+			<key>feature</key>                  <string>prysm</string>
+		</dict>
 
 		<dict>
 			<key>cell</key>                     <string>PSGroupCell</string>
 			<key>label</key>                    <string>CCRinger</string>
 			<key>key</key>                      <string>keyRinger</string>
+			<key>feature</key>                  <string>ccRinger</string>
 		</dict>
 		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
@@ -75,6 +94,7 @@
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                      <string>slidersRingerGlyph</string>
 			<key>label</key>                    <string>Icon</string>
+			<key>feature</key>                  <string>ccRinger</string>
 		</dict>
 		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
@@ -83,6 +103,7 @@
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                      <string>slidersRingerBackground</string>
 			<key>label</key>                    <string>Background</string>
+			<key>feature</key>                  <string>ccRinger</string>
 		</dict>
 	</array>
 	<key>title</key>                             <string>Sliders</string>
