--- a/control
+++ b/control
@@ -1,6 +1,6 @@
 Package: com.noisyflake.magmaevo
 Name: Magma Evo
-Depends: mobilesubstrate, firmware (>= 12.0), preferenceloader, com.opa334.ccsupport, org.thebigboss.libcolorpicker (>= 1.6.7)
+Depends: mobilesubstrate, firmware (>= 12.0), preferenceloader, com.opa334.ccsupport, com.spark.libsparkcolourpicker
 Conflicts: com.noisyflake.magma, com.noisyflake.magmapro
 Version: 1.2.4
 Architecture: iphoneos-arm
