--- a/preferences/Resources/Connectivity.plist
+++ b/preferences/Resources/Connectivity.plist
@@ -10,7 +10,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>connectivityContainerBackground</string>
 				<key>label</key>                    <string>Container Background</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -57,11 +56,11 @@
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOGlobalColorPicker</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>label</key>                    <string>Global Color</string>
 				<key>key</key>                      <string>connectivityGlobalColorEnabled</string>
-				<key>alpha</key>                    <true/>
+				<key>global</key>                   <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -69,7 +68,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityAirDropViewControllerEnabled</string>
 				<key>label</key>                    <string>AirDrop</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -77,7 +75,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityAirplaneViewControllerEnabled</string>
 				<key>label</key>                    <string>Airplane Mode</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -85,7 +82,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityBluetoothViewControllerEnabled</string>
 				<key>label</key>                    <string>Bluetooth</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -93,7 +89,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityCellularDataViewControllerEnabled</string>
 				<key>label</key>                    <string>Cellular Data</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -101,7 +96,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityHotspotViewControllerEnabled</string>
 				<key>label</key>                    <string>Personal Hotspot</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -109,7 +103,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityWifiViewControllerEnabled</string>
 				<key>label</key>                    <string>WiFi</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 
 		<dict>
@@ -131,11 +124,11 @@
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOGlobalColorPicker</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>label</key>                    <string>Global Color</string>
 				<key>key</key>                      <string>connectivityGlobalColorDisabled</string>
-				<key>alpha</key>                    <true/>
+				<key>global</key>                   <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -143,7 +136,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityAirDropViewControllerDisabled</string>
 				<key>label</key>                    <string>AirDrop</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -151,7 +143,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityAirplaneViewControllerDisabled</string>
 				<key>label</key>                    <string>Airplane Mode</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -159,7 +150,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityBluetoothViewControllerDisabled</string>
 				<key>label</key>                    <string>Bluetooth</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -167,7 +157,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityCellularDataViewControllerDisabled</string>
 				<key>label</key>                    <string>Cellular Data</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -175,7 +164,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityHotspotViewControllerDisabled</string>
 				<key>label</key>                    <string>Personal Hotspot</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -183,7 +171,6 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityWifiViewControllerDisabled</string>
 				<key>label</key>                    <string>WiFi</string>
-				<key>alpha</key>                    <true/>
 		</dict>
 	</array>
 	<key>title</key>                             <string>Connectivity</string>
