--- a/preferences/Resources/Connectivity.plist
+++ b/preferences/Resources/Connectivity.plist
@@ -5,37 +5,30 @@
 	<key>items</key>
 	<array>
 		<dict>
+			<key>cell</key>                     <string>PSLinkCell</string>
+			<key>isController</key>             <true/>
+			<key>detail</key>                   <string>MEVOConnectivityOrderController</string>
+			<key>label</key>                    <string>Rearrange Toggles</string>
+			<key>key</key>                      <string>rearrangeToggles</string>
+		</dict>
+
+		<dict>
+			<key>cell</key>                     	<string>PSGroupCell</string>
+			<key>headerCellClass</key>              <string>MEVOImage</string>
+			<key>icon</key>                         <string>images/connectivityContainer.png</string>
+		</dict>
+		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>connectivityContainerBackground</string>
 				<key>label</key>                    <string>Container Background</string>
 		</dict>
-		<dict>
-				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>isController</key>             <true/>
-				<key>detail</key>                   <string>MEVOConnectivityOrderController</string>
-				<key>label</key>                    <string>Rearrange Toggles</string>
-				<key>key</key>                      <string>rearrangeToggles</string>
-		</dict>
 
 		<dict>
-				<key>cell</key>                     <string>PSGroupCell</string>
-		</dict>
-
-		<dict>
-				<key>cell</key>                     <string>PSButtonCell</string>
-				<key>action</key>                   <string>switchState</string>
-				<key>cellClass</key>                <string>MEVOButton</string>
-				<key>label</key>                    <string>Switch to Disabled State</string>
-				<key>key</key>                      <string>switchState</string>
-				<key>textAlignment</key>            <string>center</string>
-		</dict>
-
-		<dict>
-				<key>cell</key>                     <string>PSGroupCell</string>
-				<key>label</key>                    <string>Enabled State</string>
-				<key>key</key>  	                  <string>state</string>
+			<key>cell</key>                     	<string>PSGroupCell</string>
+			<key>headerCellClass</key>              <string>MEVOImage</string>
+			<key>icon</key>                         <string>images/connectivityMode.png</string>
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
@@ -54,14 +47,17 @@
 					<string>glyphOnly</string>
 				</array>
 		</dict>
+
 		<dict>
-				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOColorPicker</string>
-				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>label</key>                    <string>Global Color</string>
-				<key>key</key>                      <string>connectivityGlobalColorEnabled</string>
-				<key>global</key>                   <true/>
+				<key>cell</key>                     <string>PSGroupCell</string>
 		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSButtonCell</string>
+				<key>action</key>                   <string>switchState</string>
+				<key>cellClass</key>                <string>MEVOStateSwitcher</string>
+				<key>key</key>                      <string>switchState</string>
+		</dict>
+
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
@@ -104,32 +100,15 @@
 				<key>key</key>                      <string>CCUIConnectivityWifiViewControllerEnabled</string>
 				<key>label</key>                    <string>WiFi</string>
 		</dict>
-
-		<dict>
-			<key>cell</key>                          <string>PSSegmentCell</string>
-			<key>cellClass</key>                     <string>MEVOSegment</string>
-			<key>default</key>                       <string>regular</string>
-			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                           <string>connectivityModeDisabled</string>
-			<key>validTitles</key>
-				<array>
-					<string>Regular</string>
-					<string>Glyph only</string>
-				</array>
-			<key>validValues</key>
-				<array>
-					<string>regular</string>
-					<string>glyphOnly</string>
-				</array>
-		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>label</key>                    <string>Global Color</string>
-				<key>key</key>                      <string>connectivityGlobalColorDisabled</string>
+				<key>label</key>                    <string>Change All</string>
+				<key>key</key>                      <string>connectivityGlobalColorEnabled</string>
 				<key>global</key>                   <true/>
 		</dict>
+
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
@@ -171,6 +150,14 @@
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>CCUIConnectivityWifiViewControllerDisabled</string>
 				<key>label</key>                    <string>WiFi</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSLinkCell</string>
+				<key>cellClass</key>                <string>MEVOColorPicker</string>
+				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
+				<key>label</key>                    <string>Change All</string>
+				<key>key</key>                      <string>connectivityGlobalColorDisabled</string>
+				<key>global</key>                   <true/>
 		</dict>
 	</array>
 	<key>title</key>                             <string>Connectivity</string>
