--- a/preferences/Resources/Misc.plist
+++ b/preferences/Resources/Misc.plist
@@ -5,15 +5,16 @@
 	<key>items</key>
 	<array>
 		<dict>
-			<key>cell</key>                     <string>PSGroupCell</string>
-			<key>label</key>                    <string>General</string>
+			<key>cell</key>                     	<string>PSGroupCell</string>
+			<key>headerCellClass</key>              <string>MEVOImage</string>
+			<key>icon</key>                         <string>images/miscBackground.png</string>
 		</dict>
 		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
 			<key>cellClass</key>                <string>MEVOColorPicker</string>
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                      <string>miscMainBackground</string>
-			<key>label</key>                    <string>Background Color</string>
+			<key>label</key>                    <string>Main Background</string>
 		</dict>
 
 		<dict>
