--- a/preferences/Resources/Sliders.plist
+++ b/preferences/Resources/Sliders.plist
@@ -5,6 +5,11 @@
 	<key>items</key>
 	<array>
 		<dict>
+			<key>cell</key>                     	<string>PSGroupCell</string>
+			<key>headerCellClass</key>              <string>MEVOImage</string>
+			<key>icon</key>                         <string>images/slidersContainer.png</string>
+		</dict>
+		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
 			<key>cellClass</key>                <string>MEVOColorPicker</string>
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
