--- a/preferences/Resources/Toggles.plist
+++ b/preferences/Resources/Toggles.plist
@@ -5,6 +5,11 @@
 	<key>items</key>
 	<array>
 		<dict>
+			<key>cell</key>                     	<string>PSGroupCell</string>
+			<key>headerCellClass</key>              <string>MEVOImage</string>
+			<key>icon</key>                         <string>images/togglesContainer.png</string>
+		</dict>
+		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
@@ -13,22 +18,9 @@
 		</dict>
 
 		<dict>
-				<key>cell</key>                     <string>PSGroupCell</string>
-		</dict>
-
-		<dict>
-				<key>cell</key>                     <string>PSButtonCell</string>
-				<key>action</key>                   <string>switchState</string>
-				<key>cellClass</key>                <string>MEVOButton</string>
-				<key>label</key>                    <string>Switch to Disabled State</string>
-				<key>key</key>                      <string>switchState</string>
-				<key>textAlignment</key>            <string>center</string>
-		</dict>
-
-		<dict>
-				<key>cell</key>                     <string>PSGroupCell</string>
-				<key>label</key>                    <string>Enabled State</string>
-				<key>key</key>  	                  <string>state</string>
+			<key>cell</key>                     	<string>PSGroupCell</string>
+			<key>headerCellClass</key>              <string>MEVOImage</string>
+			<key>icon</key>                         <string>images/togglesMode.png</string>
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
@@ -38,7 +30,7 @@
 			<key>key</key>                           <string>togglesOverlayMode</string>
 			<key>validTitles</key>
 				<array>
-					<string>Regular</string>
+					<string>Default</string>
 					<string>Remove Overlay</string>
 					<string>Color Overlay</string>
 				</array>
@@ -49,14 +41,25 @@
 					<string>colorOverlay</string>
 				</array>
 		</dict>
+
 		<dict>
+				<key>cell</key>                     <string>PSGroupCell</string>
+		</dict>
+		<dict>
+				<key>cell</key>                     <string>PSButtonCell</string>
+				<key>action</key>                   <string>switchState</string>
+				<key>cellClass</key>                <string>MEVOStateSwitcher</string>
+				<key>key</key>                      <string>switchState</string>
+		</dict>
+
+		<!-- <dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>label</key>                    <string>Global Color</string>
 				<key>key</key>                      <string>togglesGlobalColor</string>
 				<key>global</key>                   <true/>
-		</dict>
+		</dict> -->
 
 	</array>
 	<key>title</key>                             <string>Launchers &amp; Toggles</string>
