--- a/preferences/Resources/Connectivity.plist
+++ b/preferences/Resources/Connectivity.plist
@@ -15,7 +15,8 @@
 		<dict>
 			<key>cell</key>                     	<string>PSGroupCell</string>
 			<key>headerCellClass</key>              <string>MEVOImage</string>
-			<key>icon</key>                         <string>images/connectivityContainer.png</string>
+			<key>icon</key>                    		<string>images/connectivityContainer.png</string>
+			<key>prysmIcon</key>                    <string>images/connectivityContainer_prysm.png</string>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
@@ -29,6 +30,7 @@
 			<key>cell</key>                     	<string>PSGroupCell</string>
 			<key>headerCellClass</key>              <string>MEVOImage</string>
 			<key>icon</key>                         <string>images/connectivityMode.png</string>
+			<key>prysmIcon</key>                    <string>images/connectivityMode_prysm.png</string>
 		</dict>
 		<dict>
 			<key>cell</key>                          <string>PSSegmentCell</string>
