--- a/preferences/Resources/MediaControls.plist
+++ b/preferences/Resources/MediaControls.plist
@@ -5,9 +5,19 @@
 	<key>items</key>
 	<array>
 		<dict>
+			<key>cell</key>                          <string>PSSwitchCell</string>
+			<key>cellClass</key>                     <string>MEVOToggle</string>
+			<key>default</key>                       <false/>
+			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                           <string>mediaControlsColorLockscreen</string>
+			<key>label</key>                         <string>Color on Lockscreen</string>
+		</dict>
+
+		<dict>
 			<key>cell</key>                     	<string>PSGroupCell</string>
 			<key>headerCellClass</key>              <string>MEVOImage</string>
 			<key>icon</key>                         <string>images/mediaControlsContainer.png</string>
+			<key>prysmIcon</key>                    <string>images/mediaControlsContainer_prysm.png</string>
 		</dict>
 		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
@@ -15,18 +25,6 @@
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                      <string>mediaControlsContainerBackground</string>
 			<key>label</key>                    <string>Container Background</string>
-		</dict>
-
-		<dict>
-				<key>cell</key>                     <string>PSGroupCell</string>
-		</dict>
-		<dict>
-			<key>cell</key>                          <string>PSSwitchCell</string>
-			<key>cellClass</key>                     <string>MEVOToggle</string>
-			<key>default</key>                       <false/>
-			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                           <string>mediaControlsColorLockscreen</string>
-			<key>label</key>                         <string>Color Lockscreen Widget</string>
 		</dict>
 
 		<dict>
@@ -39,14 +37,14 @@
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsPrimaryLabel</string>
-				<key>label</key>                    <string>Title</string>
+				<key>label</key>                    <string>Track Name</string>
 		</dict>
 		<dict>
 				<key>cell</key>                     <string>PSLinkCell</string>
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsSecondaryLabel</string>
-				<key>label</key>                    <string>Artist / Device</string>
+				<key>label</key>                    <string>Artist</string>
 		</dict>
 
 		<dict>
@@ -86,7 +84,7 @@
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>mediaControlsRoutingButton</string>
-				<key>label</key>                    <string>AirPlay</string>
+				<key>label</key>                    <string>AirPlay Icon</string>
 		</dict>
 
 		<dict>
