--- a/preferences/Resources/Sliders.plist
+++ b/preferences/Resources/Sliders.plist
@@ -8,6 +8,7 @@
 			<key>cell</key>                     	<string>PSGroupCell</string>
 			<key>headerCellClass</key>              <string>MEVOImage</string>
 			<key>icon</key>                         <string>images/slidersContainer.png</string>
+			<key>prysmIcon</key>                    <string>images/slidersContainer_prysm.png</string>
 		</dict>
 		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
@@ -49,14 +50,6 @@
 			<key>label</key>                    <string>Volume</string>
 		</dict>
 		<dict>
-			<key>cell</key>                          <string>PSSwitchCell</string>
-			<key>cellClass</key>                     <string>MEVOToggle</string>
-			<key>default</key>                       <false/>
-			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                           <string>slidersVolumeSystem</string>
-			<key>label</key>                         <string>System-wide coloring</string>
-		</dict>
-		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
 			<key>cellClass</key>                <string>MEVOColorPicker</string>
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
@@ -77,6 +70,14 @@
 			<key>key</key>                      <string>slidersVolumeLabel</string>
 			<key>label</key>                    <string>Percent Label</string>
 			<key>feature</key>                  <string>prysm</string>
+		</dict>
+		<dict>
+			<key>cell</key>                          <string>PSSwitchCell</string>
+			<key>cellClass</key>                     <string>MEVOToggle</string>
+			<key>default</key>                       <false/>
+			<key>defaults</key>                      <string>com.noisyflake.magmaevo</string>
+			<key>key</key>                           <string>slidersVolumeSystem</string>
+			<key>label</key>                         <string>Color HUD</string>
 		</dict>
 
 		<dict>
