--- a/preferences/Resources/Misc.plist
+++ b/preferences/Resources/Misc.plist
@@ -95,96 +95,22 @@
 
 		<dict>
 			<key>cell</key>                     <string>PSGroupCell</string>
-			<key>label</key>                    <string>Power Module</string>
-			<key>feature</key>                  <string>PowerModule</string>
-		</dict>
-		<dict>
-			<key>cell</key>                     <string>PSSwitchCell</string>
-			<key>cellClass</key>                <string>MEVOToggle</string>
-			<key>default</key>                  <false/>
-			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                      <string>powerModuleHideBackground</string>
-			<key>label</key>                    <string>Hide Glyph Background</string>
-			<key>feature</key>                  <string>PowerModule</string>
+			<key>label</key>                    <string>Third-Party Modules</string>
+			<key>feature</key>                  <string>thirdparty</string>
 		</dict>
 		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
-			<key>cellClass</key>                <string>MEVOColorPicker</string>
-			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                      <string>powerModuleContainerBackground</string>
-			<key>label</key>                    <string>Container Background</string>
-			<key>feature</key>                  <string>PowerModule</string>
-		</dict>
-		<dict>
-				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOColorPicker</string>
-				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>key</key>                      <string>RespringButtonController</string>
-				<key>label</key>                    <string>Respring</string>
-				<key>feature</key>                  <string>PowerModule</string>
-		</dict>
-		<dict>
-				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOColorPicker</string>
-				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>key</key>                      <string>UICacheButtonController</string>
-				<key>label</key>                    <string>UICache</string>
-				<key>feature</key>                  <string>PowerModule</string>
-		</dict>
-		<dict>
-				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOColorPicker</string>
-				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>key</key>                      <string>SafemodeButtonController</string>
-				<key>label</key>                    <string>Safemode</string>
-				<key>feature</key>                  <string>PowerModule</string>
-		</dict>
-		<dict>
-				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOColorPicker</string>
-				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>key</key>                      <string>RebootButtonController</string>
-				<key>label</key>                    <string>Reboot</string>
-				<key>feature</key>                  <string>PowerModule</string>
-		</dict>
-		<dict>
-				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOColorPicker</string>
-				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>key</key>                      <string>PowerDownButtonController</string>
-				<key>label</key>                    <string>Power Down</string>
-				<key>feature</key>                  <string>PowerModule</string>
-		</dict>
-		<dict>
-				<key>cell</key>                     <string>PSLinkCell</string>
-				<key>cellClass</key>                <string>MEVOColorPicker</string>
-				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-				<key>key</key>                      <string>LockButtonController</string>
-				<key>label</key>                    <string>Lock Screen</string>
-				<key>feature</key>                  <string>PowerModule</string>
-		</dict>
-
-		<dict>
-			<key>cell</key>                     <string>PSGroupCell</string>
+			<key>isController</key>             <true/>
+			<key>detail</key>                   <string>MEVOBetterCCXIController</string>
 			<key>label</key>                    <string>BetterCCXI Weather</string>
 			<key>feature</key>                  <string>bcxiWeather</string>
 		</dict>
 		<dict>
-			<key>cell</key>                     <string>PSSwitchCell</string>
-			<key>cellClass</key>                <string>MEVOToggle</string>
-			<key>default</key>                  <false/>
-			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                      <string>betterCCXIFix</string>
-			<key>label</key>                    <string>Fix Grey Background (iOS 13)</string>
-			<key>feature</key>                  <string>bcxiWeather</string>
-		</dict>
-		<dict>
 			<key>cell</key>                     <string>PSLinkCell</string>
-			<key>cellClass</key>                <string>MEVOColorPicker</string>
-			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
-			<key>key</key>                      <string>betterCCXIContainerBackground</string>
-			<key>label</key>                    <string>Container Background</string>
-			<key>feature</key>                  <string>bcxiWeather</string>
+			<key>isController</key>             <true/>
+			<key>detail</key>                   <string>MEVOPowerModuleController</string>
+			<key>label</key>                    <string>Power Module</string>
+			<key>feature</key>                  <string>powerModule</string>
 		</dict>
 	</array>
 	<key>title</key>                            <string>Miscellaneous</string>
