Rename some preferences to make them easier to understand

--- a/preferences/Resources/Connectivity.plist
+++ b/preferences/Resources/Connectivity.plist
@@ -28,7 +28,7 @@
 				<key>cellClass</key>                <string>MEVOColorPicker</string>
 				<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 				<key>key</key>                      <string>connectivityContainerBackground</string>
-				<key>label</key>                    <string>Container Background</string>
+				<key>label</key>                    <string>Background Color</string>
 		</dict>
 
 		<dict>
