--- a/preferences/Resources/BetterCCXI.plist
+++ b/preferences/Resources/BetterCCXI.plist
@@ -33,7 +33,7 @@
 			<key>cellClass</key>                <string>MEVOColorPicker</string>
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                      <string>betterCCXIContainerBackground</string>
-			<key>label</key>                    <string>Container Background</string>
+			<key>label</key>                    <string>Background Color</string>
 		</dict>
 	</array>
 	<key>title</key>                            <string>BetterCCXI Weather</string>
