--- a/preferences/Resources/MediaControls.plist
+++ b/preferences/Resources/MediaControls.plist
@@ -25,7 +25,7 @@
 			<key>cellClass</key>                <string>MEVOColorPicker</string>
 			<key>defaults</key>                 <string>com.noisyflake.magmaevo</string>
 			<key>key</key>                      <string>mediaControlsContainerBackground</string>
-			<key>label</key>                    <string>Container Background</string>
+			<key>label</key>                    <string>Background Color</string>
 		</dict>
 
 		<dict>
